--- a/index.html
+++ b/index.html
@@ -71,130 +71,130 @@
 
         <!-- row 1 /////////////////////////////////////////////////////// -->
         <!-- project name - Colorado Soccer Games app   -->
-        <a href="https://teamfinder-app.firebaseapp.com/">
+                <a class="remove-hover"  href="https://teamfinder-app.firebaseapp.com/">
           <img class="item wow slideInRight" data-wow-duration="2.4s" src="images/project_image_tiles/csg-logo.png" /> </a>
         <!-- project name  - Social Cloud  proj -->
-        <a href="https://social-cloud-trends.firebaseapp.com/">
+                <a class="remove-hover"  href="https://social-cloud-trends.firebaseapp.com/">
           <img class="item wow slideInRight" data-wow-duration="2.2s" src="images/project_image_tiles/social.png" /> </a>
         <!-- project name  - SFDOC proj -->
-        <a href="http://www.github.com/bencasalino">
+                <a class="remove-hover"  href="http://www.github.com/bencasalino">
           <img class="item wow slideInRight" data-wow-duration="2s" src="images/project_image_tiles/sfdoc-black.png" /> </a>
         <!-- project - Nuggets Logo Rework proj -->
-        <a href="https://dribbble.com/shots/4099727-Denver-Nuggets-Logo-Remake">
+                <a class="remove-hover"  href="https://dribbble.com/shots/4099727-Denver-Nuggets-Logo-Remake">
           <img class="item wow slideInRight" data-wow-duration="1.8s"
           src="images/project_image_tiles/nug.png" /> </a>
         <!-- project name - team finder web app   -->
-        <a href="https://teamfinder-app.firebaseapp.com/">
+                <a class="remove-hover"  href="https://teamfinder-app.firebaseapp.com/">
           <img class="item wow slideInRight" data-wow-duration="1.6s" src="images/project_image_tiles/tfnew.png" /> </a>
         <!-- project name  - Walkin-s Welcome proj -->
-        <a href="https://github.com/chris-swan/walk_ins_welcome">
+                <a class="remove-hover" href="https://github.com/chris-swan/walk_ins_welcome">
           <img class="item wow slideInRight" data-wow-duration="1.4s"
           src="images/project_image_tiles/wiw.png" /> </a>
         <!-- project name  - Clymb Logo  -->
-        <a href="http://www.github.com/bencasalino">
+                <a class="remove-hover" href="http://www.github.com/bencasalino">
           <img class="item wow slideInRight" data-wow-duration="1.2s"
           src="images/project_image_tiles/clymb.png" /> </a>
         <!-- project UPDATE THIS  -->
-        <a href="https://social-cloud-trends.firebaseapp.com/">
+                <a class="remove-hover" href="https://social-cloud-trends.firebaseapp.com/">
           <img class="item wow slideInRight" data-wow-duration="1s" src="images/project_image_tiles/oldgroup.png" /> </a>
         <!-- project name - Game Cover Nash   -->
-        <a href="https://dribbble.com/shots/2287089-Nash-Game-Cover">
+                <a class="remove-hover"  href="https://dribbble.com/shots/2287089-Nash-Game-Cover">
           <img class="item wow slideInRight" data-wow-duration=".8s" src="images/project_image_tiles/nash.png" /> </a>
         <!-- project name  - pixel maker proj -->
-        <a href="https://multco.us/it/multnomah-county-bridge-alerts">
+                <a class="remove-hover"  href="https://multco.us/it/multnomah-county-bridge-alerts">
           <img class="item wow slideInRight" data-wow-duration=".6s" src="images/project_image_tiles/mult.png" /> </a>
         <!-- project name  - Wacom  -->
-        <a href="http://www.wacom.com/en-us">
+                <a class="remove-hover"  href="http://www.wacom.com/en-us">
           <img class="item wow slideInRight" data-wow-duration=".4s"
           src="images/project_image_tiles/wacom.png" /> </a>
         <!-- project name g70 life cards -->
-        <a href="https://github.com/g70-Life">
+                <a class="remove-hover"  href="https://github.com/g70-Life">
           <img class="item wow slideInRight" data-wow-duration=".2s" src="images/project_image_tiles/g70_final.png"
           /> </a>
         <br>
         <!-- row 2 /////////////////////////////////////////////////////// -->
         <!-- project name - Where Hackathon web app   -->
-        <a href="https://github.com/mrsaxmannjr/Hackathon-Client">
+                <a class="remove-hover" href="https://github.com/mrsaxmannjr/Hackathon-Client">
           <img class="item wow slideInRight" data-wow-duration="2.4s" src="images/project_image_tiles/where.png" /> </a>
         <!-- project name  - Planet Icons set proj -->
-        <a href="https://dribbble.com/shots/3788281-Planets-Icon-Set">
+                <a class="remove-hover"  href="https://dribbble.com/shots/3788281-Planets-Icon-Set">
           <img class="item wow slideInRight" data-wow-duration="2.2s" src="images/project_image_tiles/plan-it.png" /> </a>
         <!-- project name  - El Taco Diario -->
-        <a href="http://anniehoogendoorn.com/tacoHomepage/">
+                <a class="remove-hover"  href="http://anniehoogendoorn.com/tacoHomepage/">
           <img class="item wow slideInRight" data-wow-duration="2s"
           src="images/project_image_tiles/taco.png" /> </a>
         <!-- project name Periodic Table of Elements -->
-        <a href="https://periodictable-of-elements.firebaseapp.com/">
+                <a class="remove-hover"  href="https://periodictable-of-elements.firebaseapp.com/">
           <img class="item wow slideInRight" data-wow-duration="1.8s" src="images/project_image_tiles/tile-tptoe.png" /> </a>
         <!-- project name - BSFB web app   -->
-        <a href="http://www.bsfbbasketball.com">
+                <a class="remove-hover"  href="http://www.bsfbbasketball.com">
           <img class="item wow slideInRight" data-wow-duration="1.6s" src="images/project_image_tiles/bsfb.png" /> </a>
         <!-- project name  - GCI logo proj -->
-        <a href="https://dribbble.com/bencasalino">
+                <a class="remove-hover"  href="https://dribbble.com/bencasalino">
           <img class="item wow slideInRight" data-wow-duration="1.4s"
           src="images/project_image_tiles/gci.png" /> </a>
         <!-- project name  - BOTU proj -->
-        <a href="https://soundcloud.com/benoftheuniverse">
+                <a class="remove-hover"  href="https://soundcloud.com/benoftheuniverse">
           <img class="item wow slideInRight" data-wow-duration="1.2s" src="images/project_image_tiles/botu_sc.png" /> </a>
         <!-- project name nuggets -->
-        <a href="https://dribbble.com/bencasalino">
+                <a class="remove-hover" href="https://dribbble.com/bencasalino">
           <img class="item wow slideInRight" data-wow-duration="1s" src="images/project_image_tiles/dragic.png" /> </a>
         <!-- project name - BSFB app   -->
-        <a href="http://www.bsfbbasketball.com">
+                <a class="remove-hover" href="http://www.bsfbbasketball.com">
           <img class="item wow slideInRight" data-wow-duration=".8s"
           src="images/project_image_tiles/jon.png" /> </a>
         <!-- project name  - ADAM proj -->
-        <a href="http://www.bsfbbasketball.com">
+                <a class="remove-hover" href="http://www.bsfbbasketball.com">
           <img class="item wow slideInRight" data-wow-duration=".6s" src="images/project_image_tiles/adam.png" /> </a>
         <!-- project name  - BEN proj -->
-        <a href="http://www.bsfbbasketball.com">
+                <a class="remove-hover" href="http://www.bsfbbasketball.com">
           <img class="item wow slideInRight" data-wow-duration=".4s"
           src="images/project_image_tiles/ben.png" /> </a>
         <!-- project name RAFA proj  -->
-        <a href="http://www.bsfbbasketball.com">
+                <a class="remove-hover" href="http://www.bsfbbasketball.com">
           <img class="item wow slideInRight" data-wow-duration=".2s"
            src="images/project_image_tiles/rafa.png" /> </a>
         <br>
         <!-- row 3 /////////////////////////////////////////////////////// -->
 
         <!-- project name  - DDBOA -->
-        <a href="https://www.linkedin.com/in/bencasalino/">
+                <a class="remove-hover" href="https://www.linkedin.com/in/bencasalino/">
           <img class="item wow slideInRight" data-wow-duration="2.4s" src="images/project_image_tiles/ddboa.png" /> </a>
         <!-- project name - colo canvas web app   -->
-        <a href="https://github.com/bencasalino/colo_flag_canvas">
+                <a class="remove-hover" href="https://github.com/bencasalino/colo_flag_canvas">
           <img class="item wow slideInRight" data-wow-duration="2.2s" src="images/project_image_tiles/colo_square.png" /> </a>
         <!-- project name  - PLUS QA proj -->
-        <a href="https://www.linkedin.com/in/bencasalino/">
+                <a class="remove-hover" href="https://www.linkedin.com/in/bencasalino/">
           <img class="item wow slideInRight" data-wow-duration="2s"
           src="images/project_image_tiles/qa.png" /> </a>
         <!-- project name Rocky Mountain Cup -->
-        <a href="https://dribbble.com/shots/3785132-Rocky-Mountain-Cup-Infographic">
+                <a class="remove-hover" href="https://dribbble.com/shots/3785132-Rocky-Mountain-Cup-Infographic">
           <img class="item wow slideInRight" data-wow-duration="1.8s" src="images/project_image_tiles/cuprm.png" /> </a>
         <!-- project name - pixel web app   -->
-        <a href="https://pixel-fac8e.firebaseapp.com/">
+                <a class="remove-hover" href="https://pixel-fac8e.firebaseapp.com/">
           <img class="item wow slideInRight" data-wow-duration="1.6s"
           src="images/project_image_tiles/pm.png" /> </a>
         <!-- project name  - NBA #1 Pick Infographic  proj -->
-        <a href="https://dribbble.com/bencasalino">
+                <a class="remove-hover" href="https://dribbble.com/bencasalino">
           <img class="item wow slideInRight" data-wow-duration="1.4s"
           src="images/project_image_tiles/nba.png" /> </a>
         <!-- project name  - all bball logos  -->
-        <a href="https://dribbble.com/bencasalino">
+                <a class="remove-hover" href="https://dribbble.com/bencasalino">
           <img class="item wow slideInRight" data-wow-duration="1.2s" src="images/project_image_tiles/logo-grid.png" /> </a>
         <!-- project name - mammoth wine co.  -->
-        <a href="https://dribbble.com/shots/3785098-Mammoth-Wine-Co">
+        <a class="remove-hover" href="https://dribbble.com/shots/3785098-Mammoth-Wine-Co">
           <img class="item wow slideInRight" data-wow-duration="1s" src="images/project_image_tiles/mammoth_grid.png" /> </a>
         <!-- project name - Keyboard Drums app   -->
-        <a href="https://keyboard-drums.firebaseapp.com/">
+        <a class="remove-hover" href="https://keyboard-drums.firebaseapp.com/">
           <img class="item wow slideInRight" data-wow-duration=".8s" src="images/project_image_tiles/jsdrums.png" /> </a>
         <!-- project name  - Casalino Chiropractic proj -->
-        <a href="https://dribbble.com/bencasalino">
+          <a class="remove-hover" href="https://dribbble.com/bencasalino">
           <img class="item wow slideInRight" data-wow-duration=".6s" src="images/project_image_tiles/casa.png" /> </a>
         <!-- project name - Quark  -->
-        <a href="https://dribbble.com/shots/2782521-Quark-Package-Redesign">
+          <a class="remove-hover" href="https://dribbble.com/shots/2782521-Quark-Package-Redesign">
           <img class="item wow slideInRight" data-wow-duration=".4s" src="images/project_image_tiles/quark.png" /> </a>
         <!-- project graphic design logo elec -->
-        <a href="https://dribbble.com/shots/2262877-Logo-Idea">
+        <a class="remove-hover" href="https://dribbble.com/shots/2262877-Logo-Idea">
             <img class="item wow slideInRight" data-wow-duration=".2s"
             src="images/project_image_tiles/elec-3.png" /> </a>
       </div>
