update resume and add some styles

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="bottom-section-left">
         <!-- <h1>HELLO WORLD</h1> -->
         <h2>
-          I'M A COLORADO BASED FRONT-END WEB DEVELOPER
+          COLORADO BASED FRONT-END WEB DEVELOPER
         </h2>
         <hr>
         <div class="wrapper-row-icons">
@@ -60,7 +60,7 @@
           </a>
           <em class="animated fadeIn wow pipe-styles slideInDown" data-wow-duration="1.5s"> &nbsp;|&nbsp;
           </em>
-          <a href="images/BenCasalino-Resume.pdf" download>
+          <a href="images/BenCasalino-Resume-2018.pdf" download>
             <img class="sm sm-icons wow slideInDown" data-wow-duration="1.8s" src="images/icons/resume-black.gif"> </a>
         </div>
       </div>
